# CrudMember

./: Cargo.toml  README.md
migrations/: 20240624154919_members.down.sql  20240624154919_members.up.sql  20240625153448_users.down.sql  20240625153448_users.up.sql
src/: jwt.rs  lib.rs  main.rs
src/controllers/: auth.rs  members.rs  mod.rs
